@@ -7,6 +7,9 @@ lib/Git/PurePerl/Object/Commit.pm
 lib/Git/PurePerl/Object/Tag.pm
 lib/Git/PurePerl/Object/Tree.pm
 lib/Git/PurePerl/Pack.pm
+lib/Git/PurePerl/PackIndex.pm
+lib/Git/PurePerl/PackIndex/Version1.pm
+lib/Git/PurePerl/PackIndex/Version2.pm
 Makefile.PL
 MANIFEST			This list of files
 README
@@ -15,4 +18,3 @@ t/simple.t
 test-project-packs.tgz
 test-project-packs2.tgz
 test-project.tgz
-
